Fixed rectangle to wall in addWall

--- a/jes/help/JESAPIHelp.html
+++ b/jes/help/JESAPIHelp.html
@@ -1884,13 +1884,13 @@ def robotObstacle():
 This will create a robot world and then draw a rectangle of dimension 30x30 starting at (100,100).
 _
 addWall|<b>addWall</b>(world, x, y, width, height):<br>
-<font color=blue>world</font>: the world to add a rectangle on the ground to<br>
+<font color=blue>world</font>: the world to add a wall on the ground to<br>
 <font color=blue>x</font>: the starting x-position of the wall<br>
 <font color=blue>y</font>: the starting y-position of the wall<br>
 <font color=blue>width</font>: the width of the wall<br>
 <font color=blue>height</font>: the height of the wall<br>
 <font color=blue>returns</font>: the wall that was added to the world<br>
-Adds a rectangle to the world and draws a line signifying this.<br>
+Adds a wall to the world and draws a line signifying this.<br>
 <b>Example:</b>
 <pre>
 def addAWall():
